eks_test-dev/eks_test-dev/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: eks-test
  labels:
    app: eks-test
spec:
  replicas: 1
  selector:
    matchLabels:
      app: eks-test
  template:
    metadata:
      labels:
        app: eks-test
    spec:
      containers:
      - name: eks-test
        image: humancloudak/k8-poc
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: eks-test
  labels:
    app: eks-test
spec:
  ports:
  - port: 80
    targetPort: 8080
