eks_test-dev/eks_test-dev/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: eks-test
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - host: a481059493aa64f0cbed5c89d4eb6498-1066689816.us-west-2.elb.amazonaws.com
    http:
      paths:
      - path: /dev
        pathType: Prefix
        backend:
          service:
            name: eks-test-dev
            port:
              number: 80
  - host: a481059493aa64f0cbed5c89d4eb6498-1066689816.us-west-2.elb.amazonaws.com
    http:
      paths:
      - path: /uat
        pathType: Prefix
        backend:
          service:
            name: eks-test-uat
            port:
              number: 80
  - host: a481059493aa64f0cbed5c89d4eb6498-1066689816.us-west-2.elb.amazonaws.com
    http:
      paths:
      - path: /prod
        pathType: Prefix
        backend:
          service:
            name: eks-test-prod
            port:
              number: 80
